PLANET-6822 Fix author block image margins
Without this fix, if the bio info is too short the image takes more space and the block looks weird

--- a/assets/src/scss/pages/post/_author-block.scss
+++ b/assets/src/scss/pages/post/_author-block.scss
@@ -35,12 +35,15 @@
 .author-block-image {
   width: 200px;
   height: 200px;
-  margin: auto;
 
   img {
     width: 100%;
     border-radius: 50%;
     object-fit: cover;
+  }
+
+  @include small-and-less {
+    margin: auto;
   }
 }
 
